--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/header.css">
   <!-- <link rel="icon" href="assets/"> -->
 </head>
 <body>
   <header class="header">
-    <div class="container">
+    <div class="container d-flex header__container">
       <div class="logo">
-        <img src="" alt="Logo de Damadams" class="logo__image">
+        <img src="" alt="Damadams" class="logo__image">
       </div>
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="">Home</a>
+            <a class="nav__link nav__link--bold" href="">Home</a>
           </li>
           <li class="nav__item">
-            <a href="">About</a>
+            <a class="nav__link" href="">About</a>
           </li>
           <li class="nav__item">
-            <a href="">Latest Work</a>
+            <a class="nav__link" href="">Latest Work</a>
           </li>
           <li class="nav__item">
-            <a href="">Testimonials</a>
+            <a class="nav__link" href="">Testimonials</a>
           </li>
           <li class="nav__item">
-            <a href="">Contact</a>
+            <a class="nav__link" href="">Contact</a>
           </li>
         </ul>
       </nav>
